--- a/readme.html
+++ b/readme.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Example HTML File</title>
+</head>
+<body>
+  <h3>Hello ✨,  I wish you read my words carefully and get the useful thoughts.</h3>
+  <p>I have over 10+ years of experience in Software Technology through software idea, design, develop and maintain to build small and large projects. I honed various Programming Languages such as Assembly, C, C++, Micro C, Java, C#, HTML, CSS, JavaScript, PHP, SQL, VB Script, Python, TypeScript, Ruby, Swift, Go and Solidity, especially Java and Python, and grabed their pros and cons. I enjoy to implement favorite data struct and algorithm, while prefer to use several design patterns like MVC, OOP, MVVM and Skeleton and customize it for organization. I've used serveral libraries and frameworks like MFC, JavaEE, Laravel, CodeIgniter, React, Angular, Android, React Native, Django, FastAPI, Flutter, Ruby on Rails and see in their architecture. Also, I rate software services, like AWS, Firebase, Microsoft Azure and GCS. I would like to use JetBrain IDE series and sometimes use text editor.</p>
+</body>
+</html>
 
-<h3>Hello ✨,  I wish you read my words carefully and get the useful thoughts.</h3>
 
-I have over 10+ years of experience in Software Technology through software idea, design, develop and maintain to build small and large projects. I honed various Programming Languages such as Assembly, C, C++, Micro C, Java, C#, HTML, CSS, JavaScript, PHP, SQL, VB Script, Python, TypeScript, Ruby, Swift, Go and Solidity, especially Java and Python, and grabed their pros and cons. I enjoy to implement favorite data struct and algorithm, while prefer to use several design patterns like MVC, OOP, MVVM and Skeleton and customize it for organization. I've used serveral libraries and frameworks like MFC, JavaEE, Laravel, CodeIgniter, React, Angular, Android, React Native, Django, FastAPI, Flutter, Ruby on Rails and see in their architecture. Also, I rate software services, like AWS, Firebase, Microsoft Azure and GCS. I would like to use JetBrain IDE series and sometimes use text editor
+
+
